# adaos

./: .env.sample  .env_sample  .gitignore  .gitmodules  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  Roadmap.md  cli.py  db.py  devel_notebook.ipynb  docker-compose.yml  git_utils.py  index.html  justfile  llm_skill_pipeline.py  makefile  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-docs.txt  requirements.txt  setup.py  sitemap.xml  test_runner.py
.adaos/: README.md
.adaos/skills/: .gitignore  skills.yaml
.adaos/state/: adaos.db
.github/workflows/: ci.yml  docs.yml  sdk-export.yml
404/: index.html
Sandbox/: database.ipynb  requirments.txt
Sandbox/kotlinVoskApiVoiceNotes/: README.md  settings.gradle.kts
Sandbox/rasa/: README.txt  rasa.ipynb
Sandbox/voiceRecorderApp/: .editorconfig  .gitignore  README.md  angular.json  capacitor.config.ts  package-lock.json  package.json
Sandbox/voskapi/: README.md  main.ipynb  voskinstruction.md
adaos/: cli.py  git_utils.py  llm_skill_pipeline.py  setup_env.py
adaos/commands/: db.py  llm.py  skill.py  skill_service.py  test.py
adaos/i18n/: __init__.py  translator.py
adaos/sdk/: context.py  skill_memory.py  skill_service.py
architecture/ARCHITECTURE/: index.html
architecture/ecurity/: index.html
architecture/overview/: index.html
commands/: db.py  skill.py  skill_service.py  test.py
dataflow/: index.html
diagrams/src/: local_AdaOS_MVP  test.dot
docs/: dataflow.md  devportal.md  index.md  nervouse_system.md  overview.md  quickstart.md  roadmap.md  scenarios.md  sdk_control_plane.md  sdk_llm.md  skills.md
docs/architecture/: ARCHITECTURE.md  cli..md  config.md  context.md  ecurity.md  index.md  layers.md  (+5 more)
en/: index.html
nervouse_system/: index.html
overview/: index.html
quickstart/: index.html
roadmap/: index.html
runtime/: main.py  version_history.json
search/: search_index.json
skills_repo/: README.md
tests/: conftest.py  test_bus_sdk_adapter.py  test_cli_basic.py  test_cli_skills_crud.py  test_decorators_registry.py  test_exporter_descriptions.py  test_greet_on_boot.py  test_path_provider.py  test_proc_manager.py  test_skill_runtime.py  test_sql_schema.py
tools/: apply_pr1_pr2_scaffold.py  bootstrap.ps1  bootstrap.sh  check_env.py  find_unsafe_fs.py
(+382 files in other folders)
