[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=65.0", "wheel"]

[project]
authors = [{name = "AdaOS Team"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
]
description = "AdaOS - платформа для навыков и голосового управления"
license = {text = "MIT"}
name = "adaos"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

dependencies = [
  "typer>=0.16.0",
  "rich>=13.7.1",
  "openai>=1.43.0",
  "litellm>=0.1.14",
  "GitPython>=3.1.43",
  "SQLAlchemy>=2.0.32",
  "sqlite-utils>=3.36",
  "PyYAML>=6.0.2",
  "pytest>=8.3.2",
  "watchdog>=4.0.1",
  "vosk>=0.3.45",
  "sounddevice>=0.4.7",
]

[project.scripts]
adaos = "adaos.cli.app:app" # Точка входа CLI

[project.urls]
Homepage = "https://github.com/stipot/adaos"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
adaos = [
  "skills_templates/**/*.yaml",
  "skills_templates/**/*.py",
]
